--- a/package.json
+++ b/package.json
@@ -7,21 +7,31 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/react-transition-group": "^4.4.4",
+    "body-parser": "^1.20.0",
     "boostrap": "^2.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mongoose": "*",
+    "node-fetch": "^2.6.7",
     "react": "^17.0.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-yandex-metrika": "^2.6.0",
     "web-vitals": "^1.1.2"
+  },
+  "devDependencies": {
+    "babel": "^5.8.38",
+    "babel-loader": "^5.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "babel-node server/app.js"
   },
   "eslintConfig": {
     "extends": [
