--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.1",
     "mongoose": "*",
     "node-fetch": "^2.6.7",
+    "nodemon": "^2.0.16",
     "react": "^17.0.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^2.3.0",
