--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "boostrap": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "mongoose": "*",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.16",
@@ -21,7 +23,8 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
     "react-yandex-metrika": "^2.6.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "ws": "^8.7.0"
   },
   "devDependencies": {
     "babel": "^5.8.38",
