--- a/package.json
+++ b/package.json
@@ -3,28 +3,28 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/react-transition-group": "^4.4.4",
-    "body-parser": "^1.20.0",
+    "@types/react-transition-group": "^4.4.6",
+    "body-parser": "^1.20.2",
     "boostrap": "^2.0.0",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "fs": "0.0.1-security",
     "https": "^1.0.0",
-    "mongoose": "*",
-    "node-fetch": "^2.6.7",
-    "nodemon": "^2.0.16",
+    "mongoose": "^7.1.1",
+    "node-fetch": "^2.6.11",
+    "nodemon": "^2.0.22",
     "react": "^17.0.2",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-bootstrap": "^2.3.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "react-yandex-metrika": "^2.6.0",
     "web-vitals": "^1.1.2",
-    "ws": "^8.7.0"
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "babel": "^5.8.38",
